Revert "Temporary disable signing for Build workflow"
This reverts commit f4467d484fbe10d29d2d951aa5282a0fb53e6509.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           java-version: 8
 
       - name: Publish bootstrap artifacts
-        run: ./gradlew publishToMavenLocal -Pbootstrap=true -Ppablo.signing.enabled=false ${{ env.PABLO_OPTS }}
+        run: ./gradlew publishToMavenLocal -Pbootstrap=true ${{ env.PABLO_OPTS }}
 
       - name: Run unit tests
         run: ./gradlew check
