--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ allprojects {
 
   ext.kotlinVersion = '1.5.31'
   ext.asmVersion = '9.2'
+  ext.jsr305 = '3.0.2'
   ext.pabloVersion = '1.3.1'
 
   ext.junitVersion = '4.13.2'
